完成购物车功能

--- a/src/pages/cart/cart_trade.css
+++ b/src/pages/cart/cart_trade.css
@@ -1101,7 +1101,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 }
 
 .btn-2-1 {
-  width: 49.5%
+  width: 48.5%
 }
 
 .btn-3-1 {
@@ -3304,7 +3304,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 }
 
 .btn-2-1 {
-  width: 49.5%
+  width: 48.5%
 }
 
 .btn-3-1 {
@@ -4378,4 +4378,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 .tag-red-bk {
   color: #fff;
   background-color: #f44
+}
+.btn-2-1 {
+  width: 48.5%
 }
